--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <h2>Main</h2>
-        <form action = "/dbs" method = "GET", "Post">
+        <form action = "/dbs" method = "Post">
             <input type = "submit" value = "DBS prediction">
         </form>
         <input type = "submit" value = "Enter">
