--- a/templates/dbs_prediction.html
+++ b/templates/dbs_prediction.html
@@ -6,12 +6,9 @@
 
 </body>
   <div class="container">
-    <h2>Welcome to AN6001 AI</h2>
-    <form action="/dbs" method="post">
-      <input type="submit" value="DBS prediction">
-    </form>
-    <form action="/" method="post">
-      <input type="submit" value="Logout">
+    <h2>Predicted DBS Share Price{{r}}</h2>
+    <form action="/main" method="post">
+      <input type="submit" value="Main">
     </form>
   </div>
 </body>
